:bug: 토큰 O, 토큰 X 로직 수정